--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@react-google-maps/api": "^2.16.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "cra-template": "1.1.3",
     "eslint": "^8.57.0",
     "firebase-tools": "^13.0.3",
@@ -20,6 +21,7 @@
     "react-dom": "^18.0.0",
     "react-h5-audio-player": "^3.8.6",
     "react-media": "^1.10.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.8",
