trying to build and deploy this website, updating to see if it makes a difference

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "history_trail",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://frannyxiwu.github.io/china-dispossession-watch",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -32,6 +32,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
