--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.1.3",
     "eslint": "^8.57.0",
     "memfs": "^3.4.12",
+    "mermaid": "^11.4.1",
     "node": "^18.9.0",
     "react": "^18.0.0",
     "react-audio-player": "^0.17.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.8",
+    "reactflow": "^11.11.4",
     "recoil": "^0.7.6",
     "styled-components": "^5.3.5",
     "use-long-press": "^2.0.3"
