--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "history_trail",
+  "name": "china-dispossession-watch",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://frannyxiwu.github.io/china-dispossession-watch",
@@ -10,6 +10,8 @@
     "@mui/material": "^5.10.10",
     "@react-google-maps/api": "^2.16.0",
     "@react-pdf-viewer/core": "^3.12.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "cra-template": "1.1.3",
     "eslint": "^8.57.0",
     "memfs": "^3.4.12",
