--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,15 +1,39 @@
-name: Deploy
+name: Build And Deploy
 
 on:
-  workflow_run:
-    workflows: ["Build"]
+  push:
     branches: [ "main" ]
-    types: [ "completed" ]
 
 jobs:
+  build:
+    name: Build Create React App
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Upload production artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: cra-build
+          path: build
+
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Check out repository
