--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cra-build
-          path: build
+          path: build/*
 
   deploy:
     name: Deploy to GitHub Pages
