--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cra-build
-          path: build/*
+          path: build
 
   deploy:
     name: Deploy to GitHub Pages
@@ -53,5 +53,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./cra-build
+          publish_dir: ./cra-build/build
           publish_branch: gh-pages
