--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,31 +27,10 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Upload production artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: cra-build
-          path: build
-
-  deploy:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      # Download the artifact from the build job
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: cra-build
-
       # Deploy to GitHub Pages
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./cra-build
+          publish_dir: ./build
           publish_branch: gh-pages
