hack to force folders to be in the right directory because I can't figure out how to reconfigure it

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,10 +27,13 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: "Move bulid folder"
+        run: mv build china-dispossession-watch
+
       # Deploy to GitHub Pages
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./china-dispossession-watch
           publish_branch: gh-pages
