--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "History Trail",
-  "name": "Chinatown Community Land Trust History Trail",
+  "short_name": "China Dispossession Watch",
+  "name": "China Dispossession Watch",
   "icons": [
     {
       "src": "favicon.ico",
